# adaptive-power-method

./: .gitignore  CMakeLists.txt  README.md  main.cpp
apm/include/: apm.h  data2hdf5.h  eigenSolver.h  general.h  graph.h  parser.h  power.h  rng.h  testing.h
apm/src/: CMakeLists.txt  apm.cpp  data2hdf5.cpp  eigenSolver.cpp  general.cpp  graph.cpp  parser.cpp  power.cpp  rng.cpp  testing.cpp
